# multi-agent-support-system

./: .gitignore  README.md  agent_workflow_demo.ipynb  main.py  pyproject.toml
docs/: mock_technical_support_knowledge_base.md
src/agentic_ai_project/: __init__.py  api.py  gradio_app.py  graph.py  nodes.py  orchestrator.py  prompts.py  rag.py  schemas.py  service.py  state.py  tools.py
tests/: test_api.py  test_tools.py
